# mmkg-rag

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  changelog.md  clean_log.py  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-build.yml
examples/RAG/: lightrag.md
examples/rag/: graphrag.md  lightrag.md  qas.md
src/mmkg_rag/: __init__.py
src/mmkg_rag/gui/: helper.py  index.py  retrieval.py
src/mmkg_rag/gui/front/: index.css
src/mmkg_rag/index/: deduplicate.py  lables.py  mmodal.py  parser.py  pipe.py  prompts.py  text.py
src/mmkg_rag/retrieval/: agents.py  classify.py  generate.py  parser.py  prompts.py  search.py
src/mmkg_rag/storage/: __init__.py  index.py
src/mmkg_rag/types/: __init__.py  chunk.py  entity.py  image.py  relation.py
src/mmkg_rag/utils/: __init__.py  helper.py  llm.py  log.py
tests/: deduplicate_test.py  helper_test.py  index_test.py  llm_test.py  mmodal_test.py  parser_test.py  search_test.py
tests/assets/: er.txt  json_list_test_txt.txt  mmodaltest.md
tests/evaluation/: compare.py  graphify.py  questions_generate.py  search.py  snippets.py
